	  network module on the Freescale Freedom-KL25Z board from Alan Carvalho
	  de Assis.  This is still very much a work in progress (2013-9-3).
	* configs/*/usbmsc:  Renamed from config/*/usbstorage to match the
	  change in naming in apps/examples submitted by CCTSAO (2013-9-5).
	* drivers/usbdev.c and pl2303.c:  Don't use max packetsize assigned to
	  the endpoint when allocating request buffers; The default value of
	  the endpoint max packetsize may be incorrect because the endpoint
	  has not yet been configured.  Verified on CDC/ACM.  Corresponding
	  changes made to pl2303, but untested (2013-9-5).
	* arch/arm/src/sama5/sam_udphs.c:  The high-speed device side driver
	  is now functional (although more testing is always needed) (2013-9-5).
	* net/net_monitor.c: Fixes a race condition where a loss of connection
	  may not be detected when the connection is lost before it has been
	  accepted (from Max Holtzberg) (2013-9-6).
	* configs/sama5d3x-ek/demo:  Add a new NSH configuration.  The
	  original NSH configuration will be a simple platform for testing
	  individual features; the demo configuration will be a more complex
	  platform for demonstrating multiple interacting features (2013-9-6).
	* net/uip/uip_tcpbacklog.c:  Fix a major bug in the TCP/IP backlog
	  initialization:  Only the first backlog buffer was getting added
	  to the free list.  From Max Holtzberg (2013-9-6).
	* configs/sama5d3x-ek/demo:  Add support for USB MSC device on the
	  AT25 serial FLASH (untested) (2013-9-6).
	* drivers/net/enc28j60.c:  Changes back-ported from the ENCX24J600
	  to the ENC28J60 by Max Holtzberg.  These seem like reasonable and
	  correct changes, but have yet to be verified on an ENC28J60 (2013-9-6).
	* drivers/usbdev/usbdev_strings.c:  Extended decoding and stringifging
	  of USB trace output to include trace output from class drivers.
	  (2013-9-6).
	* drivers/usbdev/usbmsc_desc.c:  Fix a warning when USB MSC is
	  compiled for a high-speed device (2013-9-7).
